namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: app
    app.kubernetes.io/name: app
  name: app
