service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: app
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 12000
      targetPort: 12000
